--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "grunt-contrib-watch": "~v0.6.1",
         "grunt-dep-serve": "git+https://github.com/GeneralElectric/grunt-dep-serve.git#master",
         "grunt-autoprefixer": "^3.0.3",
+        "grunt-bump": "^0.7.0",
         "node-sass-import-once": "^1.2.0",
         "grunt-concurrent": "^2.0.1"
     }
