--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-clipboard",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": [
     "px-clipboard.html"
   ],
@@ -11,13 +11,15 @@
     "sass",
     "bower_components",
     "node_modules",
-    "test"
+    "test",
+    ".github",
+    "OSS_Notice.pdf"
   ],
   "dependencies": {
     "polymer": "^1.6.0",
     "px-theme": "^0.8.0",
     "clipboard": "~1.5.12",
-    "polymer-font-awesome": "https://github.com/mdwragg/polymer-font-awesome.git#~0.1.4"
+    "polymer-font-awesome": "~0.1.5"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~v1.1.6",
