--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-clipboard",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": [
     "px-clipboard.html"
   ],
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "polymer": "^1.5.0",
-    "px-theme": "^0.8.0",
+    "px-theme": "~0.8.0",
     "clipboard": "~1.5.12",
     "polymer-font-awesome": "~0.1.5"
   },
