--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-clipboard",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": [
     "px-clipboard.html"
   ],
@@ -19,10 +19,23 @@
     "polymer": "^1.5.0",
     "px-theme": "~0.8.0",
     "clipboard": "~1.5.12",
-    "polymer-font-awesome": "~0.1.5"
+    "polymer-font-awesome": "~0.1.5",
+    "px-spacing-design": "^0.3.8"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~v1.1.6",
-    "px-starter-kit-design": "~0.5.5"
+    "px-starter-kit-design": "~0.5.5",
+    "px-forms-design": "#~0.3.15",
+    "px-tables-design": "#~0.3.12",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#~1.2.3",
+    "polymer-font-awesome": "~0.1.5",
+    "px-tabs": "~0.4.0",
+    "px-api-viewer": "https://github.com/PredixDev/px-api-viewer.git",
+    "px-demo-snippet": "https://github.com/predixdev/px-demo-snippet.git",
+    "px-toggle-design": "^0.2.12",
+    "px-headings-design": "^0.2.14",
+    "px-actionable-text-icons-design": "^0.0.3",
+    "px-code-design": "^0.2.11",
+    "px-list-inline-design": "^0.2.11"
   }
 }
