--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name": "px-clipboard",
     "author": "General Electric",
     "description": "A Px component",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "private": true,
     "extName" : null,
     "repository" :
     {
         "type": "git",
-        "url": "https://github.com/PredixDev/change-this-in-package.json-please.git"
+        "url": "https://github.com/PredixDev/px-clipboard.git"
     },
     "homepage": "http://predix.io/",
     "devDependencies": {
