--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-clipboard",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": [
     "px-clipboard.html"
   ],
@@ -22,7 +22,8 @@
     "px-theme": "~1.1.2",
     "clipboard": "~1.5.12",
     "px-polymer-font-awesome": "^0.1.8",
-    "px-spacing-design": "^0.3.8"
+    "px-spacing-design": "^0.3.8",
+    "px-actionable-text-icons-design": "^0.1.0"
   },
   "devDependencies": {
     "px-starter-kit-design": "~0.6.0",
@@ -34,7 +35,7 @@
     "px-demo-snippet": "^0.6.4",
     "px-toggle-design": "^0.2.12",
     "px-headings-design": "^0.2.14",
-    "px-actionable-text-icons-design": "^0.0.3",
+    "px-actionable-text-icons-design": "^0.1.0",
     "px-code-design": "^0.2.11",
     "px-list-inline-design": "^0.2.11"
   }
