--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "clipboard": "~1.6.1",
     "px-polymer-font-awesome": "^2.0.0",
     "px-spacing-design": "^1.0.0",
-    "px-actionable-text-icons-design": "^2.0.0"
+    "px-actionable-design": "^2.0.0"
   },
   "devDependencies": {
     "px-starter-kit-design": "^1.0.0",
