--- a/bower.json
+++ b/bower.json
@@ -25,10 +25,10 @@
     "CONTRIBUTING.md"
   ],
   "dependencies": {
-    "polymer": "^1.9.0",
+    "polymer": "#1.9 - 2",
     "px-theme": "^3.0.0",
     "clipboard": "~1.6.1",
-    "px-icon-set": "^2.0.0"
+    "px-icon-set": "polymer2.0-preview"
   },
   "devDependencies": {
     "px-defaults-design": "^2.0.0",
@@ -37,9 +37,22 @@
     "px-box-sizing-design": "^1.0.0",
     "px-flexbox-design": "^1.0.0",
     "px-spacing-design": "^1.0.0",
-    "px-demo": "^2.0.0"
+    "web-component-tester": "^6.0.0"
   },
   "resolutions": {
-    "webcomponentsjs": "^0.7.24"
+    "webcomponentsjs": "^1.0.0"
+  },
+  "variants": {
+    "1.x": {
+      "dependencies": {
+        "polymer": "^1.9.0"
+      },
+      "devDependencies": {
+        "web-component-tester": "^5.0.0"
+      },
+      "resolutions": {
+        "webcomponentsjs": "^0.7.0"
+      }
+    }
   }
 }
