--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,7 @@
     "polymer": "#1.9 - 2",
     "px-theme": "^3.0.0",
     "clipboard": "~1.6.1",
-    "px-icon-set": "polymer2.0-preview"
+    "px-icon-set": "^2.0.0"
   },
   "devDependencies": {
     "px-defaults-design": "^2.0.0",
@@ -37,10 +37,13 @@
     "px-box-sizing-design": "^1.0.0",
     "px-flexbox-design": "^1.0.0",
     "px-spacing-design": "^1.0.0",
-    "web-component-tester": "^6.0.0"
+    "web-component-tester": "^6.0.0",
+    "px-demo": "^3.0.0"
   },
   "resolutions": {
-    "webcomponentsjs": "^1.0.0"
+    "webcomponentsjs": "^1.0.0",
+    "px-icon-set": "^2.0.0",
+    "px-deck-selector": "^2.0.0"
   },
   "variants": {
     "1.x": {
