--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "px-clipboard",
-  "author": "General Electric",
   "description": "A Px component",
-  "version": "1.1.3",
-  "private": false,
-  "extName": null,
   "repository": {
     "type": "git",
     "url": "https://github.com/PredixDev/px-clipboard.git"
   },
   "homepage": "https://www.predix-ui.com/",
+  "name": "px-clipboard",
+  "author": "General Electric",
+  "version": "1.1.3",
+  "extName": null,
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "ensure-px-license": "^1.0.0",
@@ -29,7 +28,18 @@
     "node-sass-import-once": "^1.2.0",
     "polymer-cli": "^1.5.7",
     "stream-combiner2": "^1.1.1",
-    "yargs": "^6.0.0"
+    "yargs": "^6.0.0",
+    "wct-browser-legacy": "^1.0.1"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "resolutions": {
+    "inherits": "2.0.3",
+    "samsam": "1.1.3",
+    "supports-color": "3.1.2",
+    "type-detect": "1.0.0"
+  },
+  "main": "px-clipboard.js",
+  "dependencies": {
+    "@polymer/polymer": "^3.0.0"
+  }
 }
